--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -606,7 +606,7 @@ LeadScreen As screen:
                 lblcommentLdS As label:
                     Height: =100
                     Size: =16
-                    Text: ="Send lead back to the Technician along with comments."
+                    Text: ="Send Lead back to the Technician along with comments."
                     Width: =800
                     X: =20
                     Y: =lblrejectionLdS.Height+lblrejectionLdS.Y
