--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -635,7 +635,7 @@ LeadListScreen As screen:
             FontWeight: =FontWeight.Bold
             Height: =100
             Size: =15
-            Text: ="Do you want to work on this lead ?"
+            Text: ="Do you want to work on this Lead ?"
             Visible: =VarPopUpInprogress
             Width: =350
             X: =(Parent.Width-Self.Width)/2
