--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -634,7 +634,7 @@ LeadSummaryScreen As screen:
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom Scope of Wwork (Manually Entered) *","Custom Scope of Work(Manually Entered)")
+                            Text: =If(IsBlank(CboxScopeofwork.SelectedItems),"Custom Scope of Work (Manually Entered) *","Custom Scope of Work(Manually Entered)")
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =10
