--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -403,7 +403,7 @@ EstimateScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DataSource: =LeadInformations
                 FillPortions: =0
-                Height: =If(EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height=0,300,EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+If(CboxCommunicatedtoCustomer.Value=true,CustomerName.Height,0)+If(CboxCommunicatedtoCustomer.Value=true,CustomerContactES.Height,0)+If(CboxAdditionalExpensesRequired.Value=true,TotalEstimatedExpenseES.Height,0)+If(CboxTravelRequired.Value=true,TotalEstimatedHoursofTravelES.Height,0)+50)
+                Height: =If(EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+CustomerName.Height+CustomerContactES.Height+TotalEstimatedExpenseES.Height+TotalEstimatedHoursofTravelES.Height=0,300,EstimatedHours.Height+Material.Height+UnitDown.Height+AdditionalExpensesRequired.Height+TravelRequired.Height+CommunicatedtoCustomer.Height+If(CboxCommunicatedtoCustomer.Value=true,CustomerName.Height,0)+If(CboxCommunicatedtoCustomer.Value=true,CustomerContactES.Height,0)+If(CboxAdditionalExpensesRequired.Value=true,TotalEstimatedExpenseES.Height,0)+If(CboxTravelRequired.Value=true,TotalEstimatedHoursofTravelES.Height,0)+30)
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =Parent.Width
@@ -420,7 +420,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_estimatedhours")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =60
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_estimatedhours")
                     Required: =false
                     Update: =IntxtEstimatedHours.Text
@@ -434,7 +434,7 @@ EstimateScreen As screen:
                         Color: =RGBA(0, 0, 0, 1)
                         Font: =Font.Arial
                         Height: =If(VarEstimateHours,48,0)
-                        Size: =If(Parent.Width<358,14,Parent.Width>358,14,16)
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: ="Estimated Hours(Total Man Hours) *"
                         Tooltip: ="Estimated hours(total man hours)"
                         Visible: =VarEstimateHours
@@ -465,7 +465,7 @@ EstimateScreen As screen:
                         RadiusBottomRight: =0
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
-                        Size: =If(Parent.Width<358,14,Parent.Width>358,14,16)
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Estimated Hours(Total Man Hours)"
                         Width: =Parent.Width - 60
                         X: =30
@@ -480,7 +480,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_notes")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =90
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_notes")
                     Required: =false
                     Update: =IntxtMaterial.Text
@@ -654,7 +654,6 @@ EstimateScreen As screen:
                         Text: ="Total Estimated Expense ($)*"
                         Visible: =VarTotalEstimatesExpense || !IsBlank(IntxtTotalEstimatedExpense)
                         Width: =Parent.Width - 120
-                        Wrap: =false
                         X: =60
                         Y: =10
                         ZIndex: =2
@@ -1270,7 +1269,7 @@ EstimateScreen As screen:
                         //|| IsBlank(IntxtMaterial) 
                         || If(CboxCommunicatedtoCustomer.Value=true,IsBlank(IntxtContactName))
                         //|| If(CboxCommunicatedtoCustomer.Value=true,IsBlank(txtphonenumber_1.Text))
-                        || If(CboxCommunicatedtoCustomer.Value=true,Len(txtphonenumber_1.Text)<>14 )
+                        || If(!IsBlank(txtphonenumber_1.Text),Len(txtphonenumber_1.Text)<>14 )
                         || If(CboxAdditionalExpensesRequired.Value=true,IsBlank(IntxtTotalEstimatedExpense))||If(CboxTravelRequired.Value=true,IsBlank(IntxtTotalEstimatedHoursofTravel)),
                         Set(VarNotification,true),
                         Set(VarIndicator, true );
