--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -624,7 +624,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_totalestimatedexpense")
                     Fill: =RGBA(255, 255, 255, 1)
-                    Height: =If(VarTotalEstimatesExpense,100,70)
+                    Height: =If(VarTotalEstimatesExpense,120,70)
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_totalestimatedexpense")
                     Required: =false
                     Update: =IntxtTotalEstimatedExpense.Text
@@ -638,7 +638,7 @@ EstimateScreen As screen:
                         BorderColor: =RGBA(116, 116, 116, 1)
                         BorderThickness: =1
                         Fill: =RGBA(237, 237, 237, 1)
-                        Height: =If(VarTotalEstimatesExpense,90,60)
+                        Height: =If(VarTotalEstimatesExpense,110,60)
                         Width: =Parent.Width-60
                         X: =30
                         Y: =5
@@ -830,7 +830,7 @@ EstimateScreen As screen:
                             Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);
                             //to show label
                             Set(VarCommunication,true);
-                            Reset(IntxtContactName);Reset(IntxtContactNumberES);
+                            Reset(IntxtContactName);Reset(txtphonenumber_1);
                             //to hide label
                             Set(VarCustomerName,false);
                             // to hide label
@@ -841,7 +841,7 @@ EstimateScreen As screen:
                             Set(varContactCurrent, Blank());
                             Set(varPhoneNumber,Blank());
                         OnUncheck: |-
-                            =Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);Set(VarCommunication,false);Reset(IntxtContactName);Reset(IntxtContactNumberES);Set(VarCustomerNameSummary,Blank());
+                            =Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);Set(VarCommunication,false);Reset(IntxtContactName);Reset(txtphonenumber_1);Set(VarCustomerNameSummary,Blank());
                             Set(VarformattedNumberSummary,Blank());
                         PressedBorderColor: =
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -937,7 +937,7 @@ EstimateScreen As screen:
                     Height: =160
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                     Required: =false
-                    Update: =IntxtContactNumberES.Text
+                    Update: =txtphonenumber_1.Text
                     Visible: =VarCommunication
                     Width: =Parent.Width
                     X: =0
@@ -969,109 +969,6 @@ EstimateScreen As screen:
                         Y: =10
                         ZIndex: =2
 
-                    ErrorMessageContactNumber As label:
-                        AutoHeight: =true
-                        Height: =10
-                        Live: =Live.Assertive
-                        PaddingBottom: =0
-                        PaddingLeft: =0
-                        PaddingRight: =0
-                        PaddingTop: =0
-                        Text: =Parent.Error
-                        Visible: =Parent.DisplayMode=DisplayMode.Edit
-                        Width: =Parent.Width - 60
-                        X: =30
-                        Y: =IntxtContactNumberES.Y + IntxtContactNumberES.Height
-                        ZIndex: =3
-
-                    StarVisibleContactNumber As label:
-                        Align: =Align.Center
-                        Color: =RGBA(255, 0, 0, 1)
-                        Font: =Font.Arial
-                        Height: =IntxtContactNumberES.Height
-                        Size: =21
-                        Text: ="*"
-                        VerticalAlign: =VerticalAlign.Top
-                        Visible: =false
-                        Width: =30
-                        Wrap: =false
-                        X: =30
-                        Y: =lblContactES.Y
-                        ZIndex: =4
-
-                    tog_phonenumberlength_1 As slider:
-                        Default: =Len(txtphonenumber_1.Text)
-                        Max: =10
-                        OnChange: |
-                            =Set(
-                                varPhoneNumber,
-                                With(
-                                    {
-                                        // extracts all numbers from the phone number field
-                                        varTextNumbersOnly: Concat(
-                                            MatchAll(
-                                                txtphonenumber_1.Text,
-                                                Match.Digit
-                                            ),
-                                            FullMatch
-                                        ),
-                                        // builds a table with phone number format at every position
-                                        varPhoneNumberFormat: With(
-                                            {varTextPhoneNumberFormat: txtPhonenumberformat_1.Text},
-                                            With(
-                                                {
-                                                    varTablePhoneNumberFormat: ForAll(
-                                                        Sequence(Len(varTextPhoneNumberFormat)),
-                                                        With(
-                                                            {
-                                                                varNumberCurrentLength: Left(
-                                                                    varTextPhoneNumberFormat,
-                                                                    Value
-                                                                )
-                                                            },
-                                                            {
-                                                                NumberFormat: varNumberCurrentLength,
-                                                                CountNumbers: CountRows(
-                                                                    MatchAll(
-                                                                        varNumberCurrentLength,
-                                                                        "0"
-                                                                    )
-                                                                )
-                                                            }
-                                                        )
-                                                    )
-                                                },
-                                                ForAll(
-                                                    Sequence(
-                                                        Max(
-                                                            varTablePhoneNumberFormat,
-                                                            CountNumbers
-                                                        )
-                                                    ),
-                                                    LookUp(
-                                                        varTablePhoneNumberFormat,
-                                                        CountNumbers = Value
-                                                    )
-                                                )
-                                            )
-                                        )
-                                    },
-                                    Text(
-                                        Value(varTextNumbersOnly),
-                                        LookUp(
-                                            varPhoneNumberFormat,
-                                            CountNumbers = Len(varTextNumbersOnly),
-                                            NumberFormat
-                                        )
-                                    )
-                                )
-                            );
-                            Reset(txtphonenumber_1);
-                        Visible: =false
-                        X: =44
-                        Y: =104
-                        ZIndex: =5
-
                     txtPhonenumberformat_1 As text:
                         Default: ="(000)-000-0000"
                         Height: =44
@@ -1080,23 +977,6 @@ EstimateScreen As screen:
                         X: =11
                         Y: =169
                         ZIndex: =6
-
-                    lblContactNumber As label:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        BorderThickness: =2
-                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
-                        DisabledFill: =RGBA(255, 255, 255, 1)
-                        Fill: =RGBA(255, 255, 255, 1)
-                        Font: =Font.Arial
-                        Height: =IntxtContactNumberES.Height
-                        OnSelect: =//Set(varContactNumber,false);
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Text: =//formattedNumber
-                        Visible: =false
-                        Width: =IntxtContactNumberES.Width
-                        X: =60
-                        Y: =IntxtContactNumberES.Y
-                        ZIndex: =7
 
                     lblCNumber As label:
                         BorderColor: =Parent.BorderColor
@@ -1121,77 +1001,6 @@ EstimateScreen As screen:
                         X: =60
                         Y: =lblContactES.Y + lblContactES.Height + 5
                         ZIndex: =8
-
-                    txtContactNumber As text:
-                        BorderColor: =Parent.BorderColor
-                        BorderThickness: =1
-                        Color: =RGBA(0, 0, 0, 0)
-                        Default: =//formattedNumber
-                        DisabledColor: =RGBA(0, 0, 0, 0)
-                        DisabledFill: =RGBA(0, 0, 0, 0)
-                        Fill: =RGBA(0, 0, 0, 0)
-                        Font: =Font.Arial
-                        Format: =TextFormat.Number
-                        HintText: ="Enter Contact Number"
-                        HoverBorderColor: =RGBA(0, 0, 0, 0)
-                        HoverColor: =RGBA(0, 0, 0, 0)
-                        HoverFill: =Self.Color
-                        MaxLength: =10
-                        OnChange: |-
-                            =/*Set(
-                                formattedNumber,
-                                Text(
-                                    Value(txtContactNumber.Text),
-                                    "[$-en-US](###) ###-####"
-                                )
-                            )*/
-                        RadiusBottomLeft: =1
-                        RadiusBottomRight: =1
-                        RadiusTopLeft: =1
-                        RadiusTopRight: =1
-                        Size: =14
-                        Visible: =false
-                        Width: =Parent.Width - 100
-                        X: =60
-                        Y: =lblContactES.Y + lblContactES.Height + 5
-                        ZIndex: =9
-
-                    IntxtContactNumberES As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        BorderThickness: =1
-                        Color: =RGBA(255, 255, 255, 1)
-                        ContentLanguage: |-
-                            =//Text(Self.Text, "[$-en-US](###) ###-####")
-                        Default: =//formattedNumber
-                        DelayOutput: =true
-                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
-                        DisabledFill: =RGBA(0, 0, 0, 0)
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
-                        HoverBorderColor: =Self.BorderColor
-                        HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =//Len(txtPhoneNumberFormatES.Text)
-                        OnChange: |
-                            =/*If(Len(IntxtContactNumberES.Text)<=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true);Set(VarPhonenumbererrormessage, false);, If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)));
-                            Set(varCustomerPhonenumber,true);
-                            */
-                        OnSelect: |-
-                            =/*Set(varCustomerPhonenumber,true);
-                            If(varContactNumber=true,Set(varContactNumber,true));*/
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Reset: =true
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: ="Customer Phone Number *"
-                        Visible: =false
-                        Width: =Parent.Width - 100
-                        X: =60
-                        Y: =lblContactES.Y + lblContactES.Height + 5
-                        ZIndex: =10
 
                     txtphonenumber_1 As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
