--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1127,36 +1127,181 @@ LeadSummaryScreen As screen:
                         Y: =18
                         ZIndex: =1
 
-                        borderCustomerContactLSS As rectangle:
+                        borderCustomerContactES_3 As rectangle:
                             BorderColor: =RGBA(116, 116, 116, 1)
                             BorderThickness: =1
                             Fill: =RGBA(237, 237, 237, 1)
-                            Height: =Parent.Height/1.06
+                            Height: =If(varCustomerPhonenumber,100,80)
                             Width: =Parent.Width-80
-                            X: =50
+                            X: =48
                             Y: =5
                             ZIndex: =1
 
                         lblContactES_1 As label:
+                            AutoHeight: =true
                             Color: =RGBA(0, 0, 0, 1)
                             Font: =Font.Arial
-                            Height: =32
+                            Height: =If(varCustomerPhonenumber,31,0)
+                            PaddingLeft: =0
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                            Text: ="Customer Phone Number"
+                            Text: ="Customer Phone Number "
+                            Visible: =varCustomerPhonenumber || !IsBlank(lblContactNumber_1)
                             Width: =Parent.Width - 120
                             Wrap: =false
-                            X: =70
-                            Y: =20
+                            X: =78
+                            Y: =5
+                            ZIndex: =2
+
+                        ErrorMessageContactNumber_1 As label:
+                            AutoHeight: =true
+                            Height: =10
+                            Live: =Live.Assertive
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Text: =Parent.Error
+                            Visible: =Parent.DisplayMode=DisplayMode.Edit
+                            Width: =Parent.Width - 60
+                            X: =48
+                            Y: =IntxtContactNumberES_1.Y + IntxtContactNumberES_1.Height
+                            ZIndex: =3
+
+                        StarVisibleContactNumber_1 As label:
+                            Align: =Align.Center
+                            Color: =RGBA(255, 0, 0, 1)
+                            Font: =Font.Arial
+                            Height: =IntxtContactNumberES_1.Height
+                            Size: =21
+                            Text: ="*"
+                            VerticalAlign: =VerticalAlign.Top
+                            Visible: =false
+                            Width: =30
+                            Wrap: =false
+                            X: =48
+                            Y: =lblContactES_1.Y
                             ZIndex: =4
 
                         txtPhonenumberformat_2 As text:
                             Default: ="(000)-000-0000"
-                            Height: =0
+                            Height: =44
                             Visible: =false
                             Width: =708
-                            X: =19
-                            Y: =65
+                            X: =29
+                            Y: =164
+                            ZIndex: =5
+
+                        lblContactNumber_1 As label:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            BorderThickness: =2
+                            DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                            DisabledFill: =RGBA(255, 255, 255, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Font: =Font.Arial
+                            Height: =IntxtContactNumberES_1.Height
+                            OnSelect: =//Set(varContactNumber,false);
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Text: =//formattedNumber
+                            Visible: =false
+                            Width: =IntxtContactNumberES_1.Width
+                            X: =78
+                            Y: =IntxtContactNumberES_1.Y
+                            ZIndex: =6
+
+                        lblCNumber_1 As label:
+                            BorderColor: =Parent.BorderColor
+                            BorderThickness: =1
+                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            Fill: =RGBA(255, 255, 255, 1)
+                            Font: =Font.Arial
+                            Height: =txtContactNumber_1.Height
+                            PaddingLeft: =12
+                            Size: =14
+                            Text: |-
+                                =If(
+                                    IsBlank(txtContactNumber_1.Text),
+                                    "",
+                                    Text(
+                                        Value(txtContactNumber_1.Text),
+                                        "[$-en-US](###) ###-####"
+                                    )
+                                )
+                            Visible: =false
+                            Width: =Parent.Width - 100
+                            X: =78
+                            Y: =lblContactES_1.Y + lblContactES_1.Height + 5
+                            ZIndex: =7
+
+                        txtContactNumber_1 As text:
+                            BorderColor: =Parent.BorderColor
+                            BorderThickness: =1
+                            Color: =RGBA(0, 0, 0, 0)
+                            Default: =//formattedNumber
+                            DisabledColor: =RGBA(0, 0, 0, 0)
+                            DisabledFill: =RGBA(0, 0, 0, 0)
+                            Fill: =RGBA(0, 0, 0, 0)
+                            Font: =Font.Arial
+                            Format: =TextFormat.Number
+                            HintText: ="Enter Contact Number"
+                            HoverBorderColor: =RGBA(0, 0, 0, 0)
+                            HoverColor: =RGBA(0, 0, 0, 0)
+                            HoverFill: =Self.Color
+                            MaxLength: =10
+                            OnChange: |-
+                                =/*Set(
+                                    formattedNumber,
+                                    Text(
+                                        Value(txtContactNumber.Text),
+                                        "[$-en-US](###) ###-####"
+                                    )
+                                )*/
+                            RadiusBottomLeft: =1
+                            RadiusBottomRight: =1
+                            RadiusTopLeft: =1
+                            RadiusTopRight: =1
+                            Size: =14
+                            Visible: =false
+                            Width: =Parent.Width - 100
+                            X: =78
+                            Y: =lblContactES_1.Y + lblContactES_1.Height + 5
                             ZIndex: =8
+
+                        IntxtContactNumberES_1 As text:
+                            BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                            BorderThickness: =1
+                            Color: =RGBA(255, 255, 255, 1)
+                            ContentLanguage: |-
+                                =//Text(Self.Text, "[$-en-US](###) ###-####")
+                            Default: =//formattedNumber
+                            DelayOutput: =true
+                            DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                            DisabledFill: =RGBA(0, 0, 0, 0)
+                            DisplayMode: =Parent.DisplayMode
+                            Font: =Font.Arial
+                            HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
+                            HoverBorderColor: =Self.BorderColor
+                            HoverFill: =RGBA(255, 255, 255, 1)
+                            MaxLength: =//Len(txtPhoneNumberFormatES.Text)
+                            OnChange: |
+                                =/*If(Len(IntxtContactNumberES.Text)<=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true);Set(VarPhonenumbererrormessage, false);, If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)));
+                                Set(varCustomerPhonenumber,true);
+                                */
+                            OnSelect: |-
+                                =/*Set(varCustomerPhonenumber,true);
+                                If(varContactNumber=true,Set(varContactNumber,true));*/
+                            PaddingLeft: =5
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Reset: =true
+                            Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                            Tooltip: ="Customer Phone Number *"
+                            Visible: =false
+                            Width: =Parent.Width - 100
+                            X: =78
+                            Y: =lblContactES_1.Y + lblContactES_1.Height + 5
+                            ZIndex: =9
 
                         txtphonenumber_2 As text:
                             BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
@@ -1166,7 +1311,6 @@ LeadSummaryScreen As screen:
                             DisabledFill: =RGBA(255, 255, 255, 1)
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
-                            Height: =50
                             HintText: =If(varCustomerPhonenumber,"","Customer Phone Number ")
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(255, 255, 255, 1)
@@ -1184,9 +1328,9 @@ LeadSummaryScreen As screen:
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Tooltip: =Parent.DisplayName
                             Width: =Parent.Width - 120
-                            X: =70
+                            X: =78
                             Y: =lblContactES_1.Y + lblContactES_1.Height + 5
-                            ZIndex: =9
+                            ZIndex: =10
 
                 "glryImageLSS As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
