--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1384,6 +1384,7 @@ LeadSummaryScreen As screen:
                             DisabledFill: =RGBA(255, 255, 255, 1)
                             DisplayMode: =Parent.DisplayMode
                             Font: =Font.Arial
+                            Height: =50
                             HintText: =If(varCustomerPhonenumber,"","Customer Phone Number ")
                             HoverBorderColor: =RGBA(202, 202, 202, 1)
                             HoverFill: =RGBA(255, 255, 255, 1)
